# scala-gazelle

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go_repos.bzl  maven_install.json  workspace_deps.bzl
antlr/: BUILD.bazel  Scala.g4
antlr/.antlr/: ScalaLexer.java  ScalaParser.java
api/scalaparse/: BUILD.bazel  scalaparse.pb.go  scalaparse.proto  scalaparse_grpc.pb.go
blaze/worker/: BUILD.bazel  worker_protocol.pb.go  worker_protocol.proto
cmd/autokeep/: BUILD.bazel  autokeep.bzl  autokeep.go
cmd/cycler/: BUILD.bazel  action.go  buildevents.go  buildevents_test.go  buildozer_recommendation.go  config.go  cycler.go  env.go  io.go  missing_symbol.go  no_such_target.go  not_found_symbol.go  progress.go  progress_test.go
cmd/indexer/: BUILD.bazel  indexer_test.go
cmd/jarindexer/: BUILD.bazel  DependencyFinder.java  GoldenTest.java  Indexer.java  IndexerTest.java  JarIndexer.java  JarIndexer3.java  JarIndexerTest.java  README.md  jarindexer.go  jarindexer_test.go
cmd/jarindexer/testdata/indexer/: Main.java  golden.json
cmd/jarindexer/testdata/simple/: golden.json
cmd/mergeindex/: BUILD.bazel  mergeindex.go
cmd/progresser/: BUILD.bazel  progresser.go
cmd/scalacparse/: BUILD.bazel  ScalaCompiler.java  ScalacParser.scala  ScalacServer.java  XmlReportableMainClass.java  XmlReporter.java
cmd/scalacserver/: BUILD.bazel  DiagnosticReportableMainClass.java  DiagnosticReporter.java  GrpcServer.java  Main.java  README.md  ScalacServer.java  ScalacServerHandler.java  TimeoutHandler.java  XmlReportableMainClass.java  XmlReporter.java  compileRequest.xml
cmd/scalafileextract/: BUILD.bazel  scalafileextract.go
cmd/scalafilemerge/: BUILD.bazel  scalafilemerge.go
cmd/semanticdbextract/: BUILD.bazel  semanticdbextract.go
cmd/semanticdbidx/: BUILD.bazel  semanticdbidx.go
cmd/semanticdbmerge/: BUILD.bazel  semanticdbmerge.go
cmd/sourceindex_merger/: BUILD.bazel  sourceindex_merger.go
cmd/sourceindexer/: BUILD.bazel  assets.go  assets_test.go  exec.go  options.go  package-lock.json  package.json  parse.go  parse_test.go  sourceindexer.bzl  sourceindexer.go  sourceindexer.js  sourceindexer_test.go
cmd/wildcardimportfixer/: BUILD.bazel  main.go
docs/architecture/: BUILD.bazel  README.md  components.puml  sequence.puml
example/jar_class_index/: BUILD.bazel
example/java_index/: BUILD.bazel
java/: BUILD.bazel
language/files/: BUILD.bazel  diff_test.go  files.go  integration_test.go
language/scala/: BUILD.bazel  cache.go  cleanup.go  config.go  configure.go  conflict_resolver_registry.go  coverage.go  cross_resolve.go  cross_resolver_registry.go  deps_cleaner_registry.go  diff_test.go  environment.go  existing_scala_rule.go  existing_scala_rule_test.go  fake_import_resolver_test.go  file.gohtml  file_scala_import_resolver.go  fix.go  fix_wildcard_imports.go  fix_wildcard_imports_test.go  flags.go  flags_test.go  generate.go  glob.go  glob_test.go  global_state.go  golden_test.go  header.gohtml  home.gohtml  import.gohtml  import_origin.go  import_origin_test.go  import_registry.go  import_resolver.go  import_resolver_test.go  imports.go  imports.tmpl  index.gohtml  intent.go  jar.gohtml  (+62 more)
language/scala/oldtestdata/compiler_disambiguation/: BUILD.out  Bar.scala
language/scala/oldtestdata/greeter/: classes.json  imports.csv
language/scala/oldtestdata/greeter/app/: BUILD.in
language/scala/oldtestdata/scala_binary/: BUILD.out
language/scala/oldtestdata/scala_test/: .gazelle.args  BUILD.in
language/scala/testdata/compiler_disambiguation/: App.scala  BUILD.in  Foo.scala
language/scala/testdata/greeter/: .gazelle.args  BUILD.in  BUILD.out  imports.csv  sources.json
language/scala/testdata/greeter/app/: BUILD.out
language/scala/testdata/greeter/lib/: ApiOptions.scala  BUILD.out
language/scala/testdata/greeter/proto/: BUILD.out  api.proto
language/scala/testdata/jarindex_provider/: .gazelle.args  BUILD.in  BUILD.out  jarindex.json
language/scala/testdata/java_provider/: .gazelle.args  BUILD.in  BUILD.out  Main.scala
language/scala/testdata/maven_direct_deps/: BUILD.in  BUILD.out  Main.scala  maven_install.json
language/scala/testdata/maven_provider/: .gazelle.args  BUILD.in  BUILD.out  Main.scala
language/scala/testdata/maven_resolver/: .gazelle.args  BUILD.in  BUILD.out  Main.scala  atlassian-public_install.json
language/scala/testdata/override_provider/: .gazelle.args  BUILD.in  BUILD.out  Main.scala
language/scala/testdata/platform_resolver/: Main.scala
language/scala/testdata/proto_resolver/: .gazelle.args  BUILD.in  BUILD.out  Main.scala
language/scala/testdata/proto_resolver/proto/: BUILD.out
language/scala/testdata/protobuf_provider/: .gazelle.args  BUILD.in  BUILD.out
language/scala/testdata/protobuf_provider/proto/: BUILD.out
language/scala/testdata/resolve_kind_rewrite_name/: .gazelle.args  BUILD.out
language/scala/testdata/resolve_kind_rewrite_name/app/: App.scala  BUILD.in  (+1 more)
language/scala/testdata/rules_jvm_external_provider/: .gazelle.args  BUILD.in  BUILD.out  maven_install.json
language/scala/testdata/scala_binary/: BUILD.in  BUILD.out  Main.scala
language/scala/testdata/scala_fileset/: BUILD.in  BUILD.out
language/scala/testdata/scala_library/: BUILD.in  BUILD.out  Main.scala
language/scala/testdata/scala_test/: BUILD.out
language/scala/testdata/scalaparse_provider/: BUILD.in  BUILD.out
language/scala/testdata/source_provider/: .gazelle.args  BUILD.in  BUILD.out  Main.scala
language/scala/testdata/source_resolver/: .gazelle.args  BUILD.in  BUILD.out
language/scala/testdata/source_scala_provider/: .gazelle.args
language/scala/testdata/stackb_rules_proto_provider/: .gazelle.args  BUILD.out  Main.scala
pkg/autokeep/: BUILD.bazel  deps.go  deps_test.go  scanner.go  scanner_test.go
pkg/bazel/: BUILD.bazel  bazel.go
rules/: BUILD.bazel  jar_class_index.bzl  java_index.bzl  java_indexer_aspect.bzl  package_filegroup.bzl  providers.bzl  scala_files.bzl  semanticdb_index.bzl
scalapb/: BUILD.bazel  scalapb.pb.go  scalapb.proto
(+366 files in other folders)
