load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# -- Gazelle language "walk" ---
# gazelle:exclude vendor

# -- Gazelle language "resolve" ---
# gazelle:resolve go go github.com/stackb/rules_proto/pkg/protoc @build_stack_rules_proto//pkg/protoc
# gazelle:resolve go go github.com/stackb/rules_proto/pkg/goldentest @build_stack_rules_proto//pkg/goldentest
# gazelle:resolve go go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library

# -- Gazelle language "go" ---
# gazelle:prefix github.com/stackb/scala-gazelle
# gazelle:go_generate_proto false

# -- Gazelle language "protobuf" ---
# gazelle:proto_rule proto_compile implementation stackb:rules_proto:proto_compile
# gazelle:proto_rule proto_compiled_sources implementation stackb:rules_proto:proto_compiled_sources

# gazelle:proto_plugin protoc-gen-go implementation golang:protobuf:protoc-gen-go
# gazelle:proto_plugin protoc-gen-go-grpc implementation grpc:grpc-go:protoc-gen-go-grpc
# gazelle:proto_plugin protoc-gen-go-grpc deps @org_golang_google_grpc//:go_default_library
# gazelle:proto_plugin protoc-gen-go-grpc deps @org_golang_google_grpc//codes
# gazelle:proto_plugin protoc-gen-go-grpc deps @org_golang_google_grpc//status
# gazelle:proto_rule proto_go_library implementation stackb:rules_proto:proto_go_library
# gazelle:proto_rule proto_go_library deps @org_golang_google_protobuf//reflect/protoreflect
# gazelle:proto_rule proto_go_library deps @org_golang_google_protobuf//runtime/protoimpl
# gazelle:proto_rule proto_go_library visibility //visibility:public
# gazelle:proto_language go plugin protoc-gen-go
# gazelle:proto_language go plugin protoc-gen-go-grpc
# gazelle:proto_language go rule proto_compiled_sources

gazelle_binary(
    name = "gazelle-protobuf",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@build_stack_rules_proto//language/protobuf",
    ],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-protobuf",
)

gazelle(
    name = "update_go_repositories",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_repos.bzl%go_repositories",
        "-build_file_proto_mode=disable_global",
        "-prune=true",
    ],
    command = "update-repos",
)

# ----------------------------------------------------
# Test-Related
# ----------------------------------------------------

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "go_repos.bzl",
        "workspace_deps.bzl",
        "//language/scala:all_files",
    ],
    visibility = ["//visibility:public"],
)
