load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_compile_assets.bzl", "proto_compile_assets")
load("@build_stack_scala_gazelle//rules:package_filegroup.bzl", "package_filegroup")

# -- Gazelle language "walk" ---
# gazelle:exclude .github
# gazelle:exclude .vscode
# gazelle:exclude bazel-bin
# gazelle:exclude bazel-out
# gazelle:exclude bazel-scala-gazelle
# gazelle:exclude bazel-testlogs
# gazelle:exclude bin
# gazelle:exclude vendor

# -- Gazelle language "resolve" ---
# gazelle:resolve go go github.com/stackb/rules_proto/v4/pkg/protoc @build_stack_rules_proto//pkg/protoc
# gazelle:resolve go go github.com/stackb/rules_proto/v4/pkg/goldentest @build_stack_rules_proto//pkg/goldentest
# gazelle:resolve go go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library

# -- Gazelle language "go" ---
# gazelle:prefix github.com/stackb/scala-gazelle
# gazelle:go_generate_proto false

# -- Gazelle language "protobuf" ---
# gazelle:proto_rule proto_compile implementation stackb:rules_proto:proto_compile
# gazelle:proto_rule proto_compiled_sources implementation stackb:rules_proto:proto_compiled_sources

# gazelle:proto_plugin protoc-gen-go implementation golang:protobuf:protoc-gen-go
# gazelle:proto_plugin protoc-gen-go-grpc implementation grpc:grpc-go:protoc-gen-go-grpc
# gazelle:proto_plugin protoc-gen-go-grpc deps @org_golang_google_grpc//:go_default_library
# gazelle:proto_plugin protoc-gen-go-grpc deps @org_golang_google_grpc//codes
# gazelle:proto_plugin protoc-gen-go-grpc deps @org_golang_google_grpc//status
# gazelle:proto_rule proto_go_library implementation stackb:rules_proto:proto_go_library
# gazelle:proto_rule proto_go_library deps @org_golang_google_protobuf//reflect/protoreflect
# gazelle:proto_rule proto_go_library deps @org_golang_google_protobuf//runtime/protoimpl
# gazelle:proto_rule proto_go_library visibility //visibility:public
# gazelle:proto_language go plugin protoc-gen-go
# gazelle:proto_language go plugin protoc-gen-go-grpc
# gazelle:proto_language go rule proto_compiled_sources

# gazelle:proto_plugin java implementation builtin:java
# gazelle:proto_rule proto_java_library implementation stackb:rules_proto:proto_java_library
# gazelle:proto_rule proto_java_library deps @com_google_protobuf//:protobuf_java
# gazelle:proto_rule proto_java_library visibility //visibility:public
# gazelle:proto_language java plugin java
# gazelle:proto_language java rule proto_compile
# gazelle:proto_language java rule proto_java_library
# gazelle:proto_language java enabled false

gazelle_binary(
    name = "gazelle-protobuf",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@build_stack_rules_proto//language/protobuf",
        "//language/files",
    ],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    external = "static",
    gazelle = ":gazelle-protobuf",
)

package_filegroup(
    name = "filegroup",
    srcs = [
        ".bazelignore",
        ".bazelrc",
        ".bazelversion",
        ".gitignore",
        "BUILD.bazel",
        "LICENSE",
        "MODULE.bazel",
        "MODULE.bazel.lock",
        "Makefile",
        "README.md",
        "WORKSPACE",
        "go.mod",
        "go.sum",
        "maven_install.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//.bcr:filegroup",
        "//blaze/worker:filegroup",
        "//build/stack/gazelle/scala/autokeep:filegroup",
        "//build/stack/gazelle/scala/cache:filegroup",
        "//build/stack/gazelle/scala/jarindex:filegroup",
        "//build/stack/gazelle/scala/parse:filegroup",
        "//cmd/autokeep:filegroup",
        "//cmd/jarindexer:filegroup",
        "//cmd/mergeindex:filegroup",
        "//cmd/scalafileextract:filegroup",
        "//cmd/scalafilemerge:filegroup",
        "//cmd/semanticdbextract:filegroup",
        "//cmd/semanticdbmerge:filegroup",
        "//cmd/wildcardimportfixer:filegroup",
        "//docs/architecture:filegroup",
        "//examples:filegroup",
        "//examples/java_index:filegroup",
        "//language/files:filegroup",
        "//language/scala:filegroup",
        "//pkg/autokeep:filegroup",
        "//pkg/bazel:filegroup",
        "//pkg/collections:filegroup",
        "//pkg/glob:filegroup",
        "//pkg/jarindex:filegroup",
        "//pkg/maven:filegroup",
        "//pkg/parser:filegroup",
        "//pkg/parser/mocks:filegroup",
        "//pkg/procutil:filegroup",
        "//pkg/protobuf:filegroup",
        "//pkg/provider:filegroup",
        "//pkg/resolver:filegroup",
        "//pkg/resolver/mocks:filegroup",
        "//pkg/scalaconfig:filegroup",
        "//pkg/scalafiles:filegroup",
        "//pkg/scalarule:filegroup",
        "//pkg/scalarule/mocks:filegroup",
        "//pkg/semanticdb:filegroup",
        "//pkg/starlarkeval:filegroup",
        "//pkg/testutil:filegroup",
        "//pkg/wildcardimport:filegroup",
        "//rules:filegroup",
        "//scala/meta/semanticdb:filegroup",
        "//scalapb:filegroup",
        "//third_party/bazelbuild/bazel-gazelle:filegroup",
        "//tools/plantuml:filegroup",
    ],
)

proto_compile_assets(
    name = "proto_compile_assets",
    deps = [
        "//blaze/worker:worker_protocol_go_compiled_sources",
        "//build/stack/gazelle/scala/autokeep:autokeep_go_compiled_sources",
        "//build/stack/gazelle/scala/cache:cache_go_compiled_sources",
        "//build/stack/gazelle/scala/jarindex:jarindex_go_compiled_sources",
        "//build/stack/gazelle/scala/parse:parse_go_compiled_sources",
        "//scala/meta/semanticdb:semanticdb_go_compiled_sources",
        "//scalapb:scalapb_go_compiled_sources",
    ],
)
