load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_antlr//antlr:antlr4.bzl", "antlr")

antlr(
    name = "scala",
    srcs = ["Scala.g4"],
    language = "Go",
)

go_library(
    name = "parser",
    srcs = [
        ":scala",
    ],
    importpath = "github.com/stackb/scala-gazelle/antlr",
    visibility = ["//visibility:public"],
    deps = [
        "@antlr4_runtimes//:go",
    ],
)
