load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "scalaparse_proto",
    srcs = ["scalaparse.proto"],
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "scalaparse_go_compile",
    output_mappings = [
        "scalaparse.pb.go=github.com/stackb/scala-gazelle/api/scalaparse/scalaparse.pb.go",
        "scalaparse_grpc.pb.go=github.com/stackb/scala-gazelle/api/scalaparse/scalaparse_grpc.pb.go",
    ],
    outputs = [
        "scalaparse.pb.go",
        "scalaparse_grpc.pb.go",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go",
        "@build_stack_rules_proto//plugin/grpc/grpc-go:protoc-gen-go-grpc",
    ],
    proto = "scalaparse_proto",
)

proto_go_library(
    name = "scalaparse_go_proto",
    srcs = [
        "scalaparse.pb.go",
        "scalaparse_grpc.pb.go",
    ],
    importpath = "github.com/stackb/scala-gazelle/api/scalaparse",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
