load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@build_stack_rules_proto//rules:proto_compiled_sources.bzl", "proto_compiled_sources")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "scalaparse_proto",
    srcs = ["scalaparse.proto"],
    visibility = ["//visibility:public"],
    deps = ["//build/stack/gazelle/scala/sourceindex:sourceindex_proto"],
)

proto_compiled_sources(
    name = "scalaparse_go_compiled_sources",
    srcs = [
        "scalaparse.pb.go",
        "scalaparse_grpc.pb.go",
    ],
    output_mappings = [
        "scalaparse.pb.go=github.com/stackb/scala-gazelle/api/scalaparse/scalaparse.pb.go",
        "scalaparse_grpc.pb.go=github.com/stackb/scala-gazelle/api/scalaparse/scalaparse_grpc.pb.go",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go",
        "@build_stack_rules_proto//plugin/grpc/grpc-go:protoc-gen-go-grpc",
    ],
    proto = "scalaparse_proto",
)

go_library(
    name = "scalaparse",
    srcs = [
        "scalaparse.pb.go",
        "scalaparse_grpc.pb.go",
    ],
    importpath = "github.com/stackb/scala-gazelle/api/scalaparse",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/gazelle/scala/sourceindex",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
