load("@build_stack_scala_gazelle//rules:package_filegroup.bzl", "package_filegroup")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "autokeep_lib",
    srcs = ["autokeep.go"],
    importpath = "github.com/stackb/scala-gazelle/cmd/autokeep",
    visibility = ["//visibility:private"],
    deps = ["//pkg/autokeep"],
)

go_binary(
    name = "autokeep",
    embed = [":autokeep_lib"],
    visibility = ["//visibility:public"],
)

package_filegroup(
    name = "filegroup",
    srcs = [
        "BUILD.bazel",
        "autokeep.bzl",
        "autokeep.go",
    ],
    visibility = ["//visibility:public"],
)
