load("@build_stack_scala_gazelle//rules:package_filegroup.bzl", "package_filegroup")

# gazelle:exclude testdata

java_library(
    name = "jarindexer",
    srcs = ["JarIndexer.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/gazelle/scala/jarindex:jarindex_java_library",
        "@classgraph_jar//jar",
        "@protobuf_java_jar//jar",
    ],
)

java_binary(
    name = "jarindexer_bin",
    main_class = "JarIndexer",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":jarindexer",
        "//build/stack/gazelle/scala/jarindex:jarindex_java_library",
        "@classgraph_jar//jar",
    ],
)

java_test(
    name = "jarindexer_test",
    srcs = ["JarIndexerTest.java"],
    data = [
        ":jarindexer_jar",
    ] + glob(["testdata/**/*"]),
    test_class = "JarIndexerTest",
    deps = [
        ":jarindexer",
        "//build/stack/gazelle/scala/jarindex:jarindex_java_library",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
    ],
)

genrule(
    name = "jarindexer_jar",
    srcs = [":jarindexer"],
    outs = ["testdata/indexer/indexer.jar"],
    cmd = "cp $(location :jarindexer) $@",
    executable = False,
)

package_filegroup(
    name = "filegroup",
    srcs = [
        "BUILD.bazel",
        "JarIndexer.java",
        "JarIndexerTest.java",
        "README.md",
    ],
    visibility = ["//visibility:public"],
)
