load("@build_stack_scala_gazelle//rules:package_filegroup.bzl", "package_filegroup")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mergeindex_lib",
    srcs = ["mergeindex.go"],
    importpath = "github.com/stackb/scala-gazelle/cmd/mergeindex",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/gazelle/scala/jarindex",
        "//pkg/collections",
        "//pkg/jarindex",
        "//pkg/protobuf",
    ],
)

go_binary(
    name = "mergeindex",
    embed = [":mergeindex_lib"],
    visibility = ["//visibility:public"],
)

package_filegroup(
    name = "filegroup",
    srcs = [
        "BUILD.bazel",
        "mergeindex.go",
    ],
    visibility = ["//visibility:public"],
)
