java_binary(
    name = "scala_compiler",
    srcs = [
        "ScalacServer.java",
        "XmlReportableMainClass.java",
        "XmlReporter.java",
    ],
    main_class = "scalaparse.ScalacServer",
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_scala_scala_compiler",
        "@io_bazel_rules_scala_scala_library",
        "@io_bazel_rules_scala_scala_reflect",
    ],
)
