java_library(
    name = "scalacserver_lib",
    srcs = [
        "ScalacServer.java",
        "XmlReportableMainClass.java",
        "XmlReporter.java",
    ],
    deps = [
        "@io_bazel_rules_scala_scala_compiler",
        "@io_bazel_rules_scala_scala_library",
        "@io_bazel_rules_scala_scala_reflect",
    ],
)

java_binary(
    name = "scalacserver",
    main_class = "ScalacServer",
    visibility = ["//visibility:public"],
    runtime_deps = [":scalacserver_lib"],
)
