java_library(
    name = "scalacserver_lib",
    srcs = [
        "GrpcServer.java",
        "ScalacServer.java",
        "ScalacServerHandler.java",
        "TimeoutHandler.java",
        "XmlReportableMainClass.java",
        "XmlReporter.java",
    ],
    deps = [
        "@com_google_protobuf//:protobuf_java",
        "@io_bazel_rules_scala_scala_compiler",
        "@io_bazel_rules_scala_scala_library",
        "@io_bazel_rules_scala_scala_reflect",
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_context",
        "@maven//:io_grpc_grpc_services",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "scalacserver",
    main_class = "scalacserver.ScalacServer",
    visibility = ["//visibility:public"],
    runtime_deps = [":scalacserver_lib"],
)
