java_library(
    name = "scalacserver_lib",
    srcs = [
        "DiagnosticReportableMainClass.java",
        "DiagnosticReporter.java",
        "GrpcServer.java",
        "Main.java",
        "TimeoutHandler.java",
    ],
    deps = [
        "//build/stack/gazelle/scala/parse:parse_grpc_java_library",
        "@io_bazel_rules_scala_scala_compiler",
        "@io_bazel_rules_scala_scala_library",
        "@io_bazel_rules_scala_scala_reflect",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "scalacserver",
    main_class = "scalacserver.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":scalacserver_lib",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)
