load("@build_stack_scala_gazelle//rules:package_filegroup.bzl", "package_filegroup")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "semanticdbextract_lib",
    srcs = ["semanticdbextract.go"],
    importpath = "github.com/stackb/scala-gazelle/cmd/semanticdbextract",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/collections",
        "//pkg/protobuf",
        "//pkg/semanticdb",
        "//scala/meta/semanticdb",
    ],
)

go_binary(
    name = "semanticdbextract",
    embed = [":semanticdbextract_lib"],
    visibility = ["//visibility:public"],
)

package_filegroup(
    name = "filegroup",
    srcs = [
        "BUILD.bazel",
        "semanticdbextract.go",
    ],
    visibility = ["//visibility:public"],
)
