load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "semanticdbidx_lib",
    srcs = ["semanticdbidx.go"],
    importpath = "github.com/stackb/scala-gazelle/cmd/semanticdbidx",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/collections",
        "//pkg/protobuf",
        "//scala/meta/semanticdb",
    ],
)

go_binary(
    name = "semanticdbidx",
    embed = [":semanticdbidx_lib"],
    visibility = ["//visibility:public"],
)
