load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sourceindex_merger_lib",
    srcs = ["sourceindex_merger.go"],
    importpath = "github.com/stackb/scala-gazelle/cmd/sourceindex_merger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/index",
    ],
)

go_binary(
    name = "sourceindex_merger",
    embed = [":sourceindex_merger_lib"],
    visibility = ["//visibility:public"],
)
