load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "sourceindexer_lib",
    srcs = [
        "assets.go",
        "exec.go",
        "options.go",
        "sourceindexer.go",
    ],
    embedsrcs = [
        "node_modules/scalameta-parsers/index.js",
        "sourceindexer.js",
        "node.exe",
    ],
    importpath = "github.com/stackb/scala-gazelle/cmd/sourceindexer",
    visibility = ["//visibility:public"],
    deps = ["@com_github_amenzhinsky_go_memexec//:go-memexec"],
)

go_binary(
    name = "sourceindexer",
    embed = [":sourceindexer_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "sourceindexer_test",
    srcs = [
        "assets_test.go",
        "exec_test.go",
        "options_test.go",
    ],
    embed = [":sourceindexer_lib"],
    deps = ["@com_github_google_go_cmp//cmp"],
)

genrule(
    name = "node_exe",
    outs = ["node.exe"],
    cmd = "cp $(location @build_bazel_rules_nodejs//toolchains/node:node_bin) $@",
    executable = True,
    tools = ["@build_bazel_rules_nodejs//toolchains/node:node_bin"],
)
